2012-11-04  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/evaluate.c, gpasm/directive.c, gpasm/gperror.c:
    fixed bug #186 - unresolvable expressions regarding externals fail silently
  * configure.ac, configure, doc/gputils.lyx: version changed to 0.15.0

2012-11-03  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c, gpasm/lst.c, gpasm/lst.h, gpasm/gperror.c,
    gpasm/gpasm.h.in: implemented LIST directive c=xxx option
  * gpasm/scan.l, gplink/scan.l: skip CR followed by LF
  * gpasm/ppscan.l: don't preprocess #v in comments

2012-11-02  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c:
    db, dw: don't generate code if not in appropriate section;
    error GPE_ILLEGAL_DIR prints the illegal directive
  * gpasm/coff.h, gpasm/scan.l: cosmetic changes
  * gpasm/gpasm.c:
    initialize new_sec_flags to none on second pass for relative mode
  * gpasm/gperror.c, gpasm/gperror.h: introduced GPE_LABEL_IN_SECTION;
    error GPE_ILLEGAL_DIR prints the illegal directive
  * gpasm/parse.y: introduced GPE_LABEL_IN_SECTION
  * gpasm/lst.c: fixed DB assertion
  * gplink/testsuite/gplink.project/asmfiles/reloc12_1.asm,
    gplink/testsuite/gplink.project/asmfiles/reloc12_2.asm:
    idata section replaced with udata since idata is not supported on
    12bit devices
  * gpasm/testsuite/test, gplink/testsuite/test:
    tests can be executed using MPLABX tools
  * gpasm/testsuite/gpasm.project/asmfiles/baddefine.asm,
    gpasm/testsuite/gpasm.project/objasm/config2.asm
    gpasm/testsuite/gpasm.project/objasm/pageselw2.asm,
    gpasm/testsuite/gpasm.project/objasm/data2.asm,
    gpasm/testsuite/gpasm.project/objasm/code_pack.asm:
    adapted for MPLABX tools
  * gpasm/testsuite/gpasm.project/objasm/op16.asm,
    gpasm/testsuite/gpasm.project/objfiles/op16.o:
    test extended
  * gputils/testsuite/gpdasm.project/op16e.asm:
    added MOVLB Argument out of range test

2012-11-01  Borut Razem  <borutr@users.sourceforge.net>