@@ -1,3 +1,6 @@
+2012-11-15  Borut Razem  <borutr@users.sourceforge.net>
+  * fixed bug #258 - [GPLINK] error: multiple sections using address 0xYYYY
+
 2012-11-04  Borut Razem  <borutr@users.sourceforge.net>
   * gpasm/evaluate.c, gpasm/directive.c, gpasm/gperror.c:
     fixed bug #186 - unresolvable expressions regarding externals fail silently
